# otopr

./: Cargo.toml
benches/: varint.rs
otopr-build/: Cargo.toml
otopr-build/src/: lib.rs
otopr-derive/: Cargo.toml
otopr-derive/src/: common.rs  decode.rs  encode.rs  enumeration.rs  lib.rs
otopr-derive/src/common/: input_cfg.rs
src/: __private.rs  decoding.rs  encoding.rs  impls.rs  lib.rs  map.rs  prelude.rs  repeated.rs  ser.rs  tests.rs  traits.rs  varint.rs  wire_types.rs
