[package]
name = "otopr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
bytes = "1.1.0"
otopr-derive = { path = "otopr-derive", version = "0.1.0" }


[dev-dependencies]
criterion = "0.3"
prost = "0.8.0"
rand = "0.8"

[workspace]
members = ["otopr-derive"]

[[bench]]
name = "varint"
harness = false